# adventofcode

./: .gitignore  LICENSE  Pipfile  README.md  update_progress.py
2018/: .gitignore  Taskfile.yml  go.mod  pyproject.toml
2018/common/: common.go  readlines.go
2018/day02/: app.go
2018/day03/: app.go
2018/day04/: app.go
2018/day05/: app.go
2018/day06/: app.go
2018/day07/: app.go
2018/day08/: app.go  app_test.go  input.txt
2018/day09/: app.go  scorecounter.go
2018/day1/: app.go  day1.go  lib.go  lib_test.go
2018/day10/: app.go  point.go  pointCloud.go  point_test.go
2018/day11/: main.go
2018/day12/: main.go
2018/day13/: input.txt  main.go  main_test.go
2018/day14/: main.go  main_test.go
2018/day15/: input  main.py
2018/day16/: input1.txt  input2.txt  main.go
2018/day16/computer/: computer.go
2018/day17/: input  main.py
2018/day18/: input.txt  main.go
2018/day19/: input.txt  main.go
2018/day19/computer/: computer.go
2018/day2/: app.go  day2.go  lib.go  lib_test.go
2018/day20/: input  main.py  sample1  sample2
2018/day22/: main.py
2018/day3/: day3.go  lib.go  lib_test.go
2018/day5/: app.go  day5.go  day5_test.go
2019-python/: pyproject.toml
2019-python/day03/: app.py
2019-python/day05/: intcode.py
2019-python/day07/: test_examples.py
2019-python/day08/: app.py  test_examples.py
2019-python/day09/: app.py  large_array.py  test_intcode.py
2019-python/day10/: app.py  test_examples.py
2019-python/day11/: intcode.py
2019-python/day12/: moon.py  test_moon.py
2019-python/day13/: app.py  consoledrawer.py  intcode.py
2019-python/day15/: app.py  explorer.py  intcode.py
2019-python/day16/: app.py  fft.py
2019-python/day17/: app.py  intcode.py
2019-python/day23/: app.py  ensemble.py  input.txt
2022/: .gitignore  Taskfile.yml  pyproject.toml
2022/common/: point2d.py  shortest_path.py  test_shortest_path.py
2022/day00/: solution.py  test_solution.py
2022/day01/: solution.py
2022/day02/: solution.py  test_solution.py
2022/day03/: solution.test.ts  solution.ts
2022/day05/: test_solution.py
2022/day06/: test_solution.py
2022/day07/: test_solution.py
2022/day08/: solution.py
2022/day09/: solution.py
2022/day10/: solution.py
2022/day11/: solution.py  test_solution.py
2022/day12/: solution.py  test_solution.py
2022/day14/: solution.py  test_solution.py
2022/day15/: test_solution_part_1.py  test_solution_part_2.py
2022/day16/: solution_part_1.py  solution_part_2.py  test_solution_part_1.py  test_solution_part_2.py
2022/day17/: solution.py  solution_part_1.py  test_solution.py  test_solution_part_1.py
2022/day18/: input  test_solution.py
2022/day19/: solution.py  solution_part_1.py  test_solution_part1.py
2022/day20/: solution.py  test_solution.py
2022/day21/: test_solution.py
2022/day22/: solution.py  test_solution.py
2022/day22/input/: logic.py  maps
2022/day22/sample/: logic.py  route
2022/day23/: solution.py
2022/day24/: test_solution.py
2022/day25/: solution.py  test_solution.py
2022/python/: Taskfile.yml
2022/python/common/: point3d.py  shortest_path.py  simulated_annealing.py
2022/python/day01/: test_solution.py
2022/python/day04/: solution.py  test_solution.py
2022/python/day05/: solution.py
2022/python/day06/: solution.py
2022/python/day07/: solution.py
2022/python/day08/: solution.py  test_solution.py
2022/python/day09/: solution.py  test_solution.py
2022/python/day10/: test_solution.py
2022/python/day11/: test_solution.py
2022/python/day13/: solution.py  test_solution.py
2022/python/day14/: solution.py
2022/python/day15/: solution_part_1.py  solution_part_2.py
2022/python/day16/: solution_part_1.py  solution_part_2.py  test_solution_part_2.py
2022/python/day17/: solution.py
2022/python/day18/: solution.py
2022/python/day19/: solution.py  test_solution.py
2022/python/day20/: input  solution.py
2022/python/day21/: solution.py
2022/python/day22/: base.py  solution.py  test_solution.py
2022/python/day22/input/: logic.py  route
2022/python/day22/sample/: maps
2022/python/day23/: test_solution.py
2022/python/day24/: input  solution.py
2022/python/day25/: solution.py
2022/typescript/: Taskfile.yml  package-lock.json  package.json
2022/typescript/day03/: solution.ts
2023/rust/aoc/: Cargo.toml  Taskfile.yml  init_day.sh
2023/rust/aoc/benches/: benchmark.rs
2023/rust/aoc/src/: lib.rs
2024/python/: justfile  pyproject.toml
2024/python/tests/: test_aoc2024.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py
2025/python/: .gitignore  README.md  justfile  pyproject.toml
2025/python/tests/: test_aoc2025.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py
(+448 files in other folders)
