[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of code 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []



[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "ty>=0.0.1a29",
]
