[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
array2d = "0.3.1"
enum_dispatch = "0.3.12"
indexmap = "2.1.0"
itertools = "0.12.0"
maplit = "1.0.2"
num = "0.4.1"
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"
slotmap = "1.0.7"

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = "0.5.1"

[features]
slow = []

[[bench]]
name = "benchmark"
harness = false

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false
