[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
array2d = "0.3.2"
enum_dispatch = "0.3.13"
indexmap = "2.12.1"
itertools = "0.14.0"
maplit = "1.0.2"
num = "0.4.3"
pest = "2.8.4"
pest_derive = "2.8.4"
regex = "1.12.2"
slotmap = "1.1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
